@@ -215,13 +215,18 @@ void DiskUsageGUI::slotViewChanged( int view )
 bool DiskUsageGUI::newSearch()
 { 
   // ask the user for the copy dest
-  KChooseDir *chooser = new KChooseDir( 0, i18n( "Viewing the usage of directory:" ),
+  
+/* REVIEW 
+	KChooseDir *chooser = new KChooseDir( 0, i18n( "Viewing the usage of directory:" ),
                                         baseDirectory.prettyURL(1,KURL::StripFileProtocol) );
   QString dest = chooser->dest;
   if ( dest == QString::null )
-    return false; // the usr canceled    
-    
-  baseDirectory = vfs::fromPathOrURL( dest );
+    return false; // the usr canceled    */
+
+  KURL tmp = KChooseDir::getDir(i18n( "Viewing the usage of directory:" ), baseDirectory);
+  if (tmp.isEmpty()) return false;
+  /* baseDirectory = vfs::fromPathOrURL( dest ); */
+  baseDirectory = tmp;
   
   QTimer::singleShot( 0, this, SLOT( loadUsageInfo() ) );
   return true;
