@@ -529,6 +529,14 @@ void KRslots::rename()         { ACTIVE_FUNC->rename();     }
 // Shift F3
 void KRslots::viewDlg(){
   // ask the user for a url to view
+	KURL dest = KChooseDir::getDir(i18n("Enter a URL to view:"), ACTIVE_PANEL->virtualPath(), ACTIVE_PANEL->virtualPath());
+	if ( dest.isEmpty() ) return ; // the user canceled
+	if ( dest.isRelativeURL(dest.url()) )  {
+		dest = KURL::fromPathOrURL(ACTIVE_FUNC->files()->vfs_workingDir()+"/"+dest.url());
+	}
+#if 0  
+  REVIEW
+  
   KChooseDir *chooser = new KChooseDir( 0,i18n("Enter a URL to view:"), QString::null);
   QString dest = chooser->dest;
   if ( dest == QString::null ) return ; // the usr canceled
@@ -537,15 +545,23 @@ void KRslots::viewDlg(){
     /* vfs::fromPathOrURL requires fullpath, so we check whether it is relative  */
     if ( !dest.contains( ":/" ) && !dest.startsWith( "/" ) )
       dest = ACTIVE_FUNC->files()->vfs_getOrigin().prettyURL(1)+dest; /* it's full path now */
-    
-    KrViewer::view( vfs::fromPathOrURL(dest) ); // view the file
-  }
+#endif    
+    KrViewer::view( dest ); // view the file
+//  }
   // nothing more to it!
 }
 
 // Shift F4
 void KRslots::editDlg(){
   // ask the user for the filename to edit
+	KURL dest = KChooseDir::getDir(i18n("Enter the filename to edit:"), ACTIVE_PANEL->virtualPath(), ACTIVE_PANEL->virtualPath());
+	if ( dest.isEmpty() ) return ; // the user canceled
+	if ( dest.isRelativeURL(dest.url()) )  {
+		dest = KURL::fromPathOrURL(ACTIVE_FUNC->files()->vfs_workingDir()+"/"+dest.url());
+	}
+#if 0
+  REVIEW
+    
   KChooseDir *chooser = new KChooseDir( 0,i18n("Enter the filename to edit:"), QString::null);
   QString dest = chooser->dest;
   if ( dest == QString::null ) return ; // the usr canceled
@@ -554,9 +570,9 @@ void KRslots::editDlg(){
     /* vfs::fromPathOrURL requires fullpath, so we check whether it is relative  */
     if ( !dest.contains( ":/" ) && !dest.startsWith( "/" ) )
       dest = ACTIVE_FUNC->files()->vfs_getOrigin().prettyURL(1) + dest; /* it's full path now */
-
-    KrViewer::edit( vfs::fromPathOrURL( dest ), true );
-  }
+#endif
+    KrViewer::edit( dest, true );
+//  }
   // nothing more to it!
 }
 
@@ -742,16 +758,25 @@ void KRslots::slotCombine(){
     }
   }
 
-  // ask the user for the copy dest
+   // ask the user for the copy dest
+	KURL dest = KChooseDir::getDir(i18n("Combining %1.* to directory:" ).arg( fileName ),
+		 ACTIVE_PANEL->otherPanel->virtualPath());
+	if ( dest.isEmpty() ) return ; // the user canceled
+	if ( dest.isRelativeURL(dest.url()) )  {
+		dest = KURL::fromPathOrURL(ACTIVE_FUNC->files()->vfs_workingDir()+"/"+dest.url());
+	}
+#if 0	
+  REVIEW
+    
   KChooseDir *chooser = new KChooseDir( 0, i18n( "Combining %1.* to directory:" ).arg( fileName ),
                                         ACTIVE_PANEL->otherPanel->virtualPath().prettyURL() );
   QString dest = chooser->dest;
   if ( dest == QString::null )
     return ; // the usr canceled
+#endif
+  bool combineToOtherPanel = ( dest == ACTIVE_PANEL->otherPanel->virtualPath() );
 
-  bool combineToOtherPanel = ( dest == ACTIVE_PANEL->otherPanel->virtualPath().prettyURL() );
-
-  Combiner combine( MAIN_VIEW, fileName, dest, unixStyle );
+  Combiner combine( MAIN_VIEW, fileName, dest.prettyURL(), unixStyle );
   combine.combine();
 
   if ( combineToOtherPanel )
